z-index corrected, tested and displays okay

--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,21 @@
   width: 400px;
   height: 250px;
   background: linear-gradient(0deg, #000, #262626);
+  z-index: 0;
 }
 
+.shadow:before 
+{
+  position: relative;
+  content: '';
+  left: -2px;
+  top: -2px;
+  background: linear-gradient(45deg, #9F000F, #FFBF00, #228B22, #9F000F, #FFBF00, #228B22, #9F000F, #FFBF00, #228B22);
+  width: 100%;
+  height: 100%;
+  background-size: 400%;
+  z-index: -1;
+}
 
 p {
   background:rgba(55, 55, 55, 0.0);
